[tool.poetry]
name = "commons-python"
version = "0.1.0"
description = ""
authors = ["Cleison Amorim <cca5@cin.ufpe.br>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "commons" }
]

[tool.poetry.dependencies]
python = "^3.7"
# example = { git = "https://github.com/amorim-cleison/example.git", branch = "develop", tag = "0.1.2" }
PyYAML = "^5.3.1"
numpy = "1.19.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
